--- a/index.html
+++ b/index.html
@@ -18,12 +18,15 @@
 <p>O profissional Full Stack é um desenvolvedor que trabalha tanto no front-end quanto no back-end de aplicações. Ele lida com tecnologias de interface, como HTML, CSS, JavaScript e frameworks como React ou Angular, além de linguagens e ferramentas de servidor, como Node.js, Python e bancos de dados.</p>
 
 <p>Esse profissional também pode ter noções de DevOps, gerenciando servidores e ambientes na nuvem. Sua versatilidade é valorizada, especialmente em equipes menores, mas exige constante atualização para acompanhar a evolução das tecnologias usadas no desenvolvimento.</p>
+
 <h2>As habilidades e competências de um profissional Full Stack incluem:</h2>
+
 <h3><u>Habilidades Técnicas:</u></h3>
-<ul><p><b>Front-end:</b> Domínio de HTML, CSS, JavaScript e frameworks como React ou Angular.</p>
-    <p><b>Back-end:</b> Conhecimento em Node.js, Python, Java e bancos de dados.</p>
-    <p><b>DevOps:</b> Experiência com servidores e nuvem, como AWS.</p>
-    <p><b>Versionamento de Código:</b> Uso de Git.</ul></p>
+
+<ul><p><strong>Front-end:</strong> Domínio de HTML, CSS, JavaScript e frameworks como React ou Angular.</p>
+    <p><strong>Back-end:</strong> Conhecimento em Node.js, Python, Java e bancos de dados.</p>
+    <p><strong>DevOps:</strong> Experiência com servidores e nuvem, como AWS.</p>
+    <p><strong>Versionamento de Código:</strong> Uso de Git.</ul></p>
 
 <h3><u>Competências Comportamentais:</u></h3>
 <ul><p>Adaptabilidade e aprendizado rápido.</p>
